Correct sun alignment.

--- a/css/index.css
+++ b/css/index.css
@@ -143,7 +143,7 @@ input[disabled].lr {
 
 #sun {
     max-height: 1.5em;
-    margin: 0 0px 0 20px;
+    margin: 0 0px -10px 20px;
 }
 
 #page_title {
